--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="http://v4-alpha.getbootstrap.com/favicon.ico">
+		<meta name="description" content="Open-source library for building fast, concurrent web servers using Swift">
+		<meta name="author" content="Zewo">
+		<link rel="icon" href="favicon.ico">
 		<title>Zewo</title>
 		<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300">
