--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 			<div class="hero-caption container">
 				<img id="logo-large" src="/assets/images/logo-large.png" srcset="/assets/images/logo-large.png 1x, /assets/images/logo-large@2x.png 2x, /assets/images/logo-large@3x.png 3x" alt="Logo">
 				<h2>Zewo</h2>
-				<h1>Introducing Zewo.</h1>
-				<h3>The next generation open-source library <br class="hero-caption-break">for building fast, concurrent web servers using Swift.</h3>
+				<h1>Build server software in Swift</h1>
+				<h3>Zewo is a set of open source libraries that help you build<br />modern and blazing fast server software.</h3>
 				<a href="https://github.com/Zewo">
 					<img class="github-button" src="/assets/images/get-started-on-github.svg" alt="Github">
 				</a>
@@ -82,10 +82,8 @@
 					</div>
 					<div class="col-md-8">
 						<h2>Linux ready</h2>
-						<h3>Build your server software in Swift</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ullamcorper, dolor vel suscipit
-blandit, est libero euismod lorem, at fringilla ipsum dui eget libero. Suspendisse urna ante,
-luctus sed nulla at, blandit luctus arcu.</p>
+						<h3>Compiled Swift, running on your Linux distribution.</h3>
+						<p>Linux dominates the web. As Swift is open source, and capable of running on Linux, so is Zewo. You can easily run Zewo on AWS, DigitalOcean or any of your favourite cloud infrastructure provider.</p>
 					</div>
 				</div>
 			</div>
@@ -95,9 +93,11 @@ luctus sed nulla at, blandit luctus arcu.</p>
 						<img class="featurette-image center-block" src="/assets/images/feature-concurrency.svg" alt="Concurrency with Venice">
 					</div>
 					<div class="col-md-7 col-md-pull-3">
-						<h2>Concurrency with Venice</h2>
-						<h3>CSP concurrency model in Swift</h3>
-						<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<h2>Venice concurrency</h2>
+						<h3>Go-style concurrency in Swift.</h3>
+						<p>
+							Concurrency is a vital part of performant server software. Zewo brings you the best of Swift, with what you probably enjoy the most with Go — Go-style concurrency. Using the blazing fast <a href="http://libmill.org" target="_blank">libmill</a>, software built with Venice is stable, fast and enjoyable to work with!
+						</p>
 					</div>
 				</div>
 			</div>
@@ -108,8 +108,8 @@ luctus sed nulla at, blandit luctus arcu.</p>
 					</div>
 					<div class="col-md-8">
 						<h2>MIT Licensed</h2>
-						<h3>Contribute under the most permissive license</h3>
-						<p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<h3>Contribute to everyone, without reservation.</h3>
+						<p>The entire Zewo code base is licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>. By contributing to Zewo you are contributing to an open and engaged community of brilliant Swift programmers. Join us on <a href="http://slack.zewo.io" target="_blank">Slack</a> to get to know us!</p>
 					</div>
 				</div>
 			</div>
