Added docker section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="col-md-8">
 						<h2>Linux ready</h2>
 						<h3>Compiled Swift, running on your Linux distribution.</h3>
-						<p>Linux dominates the web. As Swift is open source, and capable of running on Linux, so is Zewo. You can easily run Zewo on AWS, DigitalOcean or any of your favourite cloud infrastructure provider.</p>
+						<p>As Swift is open source and capable of running on Linux, you can easily deploy Zewo on AWS, DigitalOcean, or any of your other favorite cloud infrastructure provider.</p>
 					</div>
 				</div>
 			</div>
@@ -93,10 +93,10 @@
 						<img class="featurette-image center-block" src="/assets/images/feature-concurrency.svg" alt="Concurrency with Venice">
 					</div>
 					<div class="col-md-7 col-md-pull-3">
-						<h2>Venice concurrency</h2>
-						<h3>Go-style concurrency in Swift.</h3>
+						<h2>Go-style concurrency</h2>
+						<h3>Concurrent programming without callbacks</h3>
 						<p>
-							Concurrency is a vital part of performant server software. Zewo brings you the best of Swift, with what you probably enjoy the most with Go — Go-style concurrency. Using the blazing fast <a href="http://libmill.org" target="_blank">libmill</a>, software built with Venice is stable, fast and enjoyable to work with!
+							What many have come to love with the <a href="https://golang.org" target="_blank">Go</a> programming language is its concurrency model. Go uses <a href="https://en.wikipedia.org/wiki/Communicating_sequential_processes" target="_blank">CSP</a> (Communicating Sequential Processes), which is something that Zewo brings to Swift using <a href="http://libmill.org" target="_blank">libmill</a>. Say goodbye to callback hell, and meet your new favourite way of building concurrent software!
 						</p>
 					</div>
 				</div>
@@ -104,15 +104,28 @@
 			<div class="row featurette">
 				<div class="container">
 					<div class="col-md-4">
-						<img class="featurette-image center-block" src="/assets/images/feature-mit.svg" alt="MIT Licensed">
+						<img class="featurette-image center-block" src="/assets/images/feature-docker.svg" alt="Docker support">
 					</div>
 					<div class="col-md-8">
+						<h2>Ship your code safely</h2>
+						<h3>Containers for each version</h3>
+						<p>Swift is a living language that improves at a fast rate. Zewo provides you with utilities, such as Docker images for each release, so you can deploy your code safely.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row featurette alt">
+				<div class="container">
+					<div class="col-md-4 col-md-push-8">
+						<img class="featurette-image center-block" src="/assets/images/feature-mit.svg" alt="MIT Licensed">
+					</div>
+					<div class="col-md-7 col-md-pull-3">
 						<h2>MIT Licensed</h2>
 						<h3>Contribute to everyone, without reservation.</h3>
 						<p>The entire Zewo code base is licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>. By contributing to Zewo you are contributing to an open and engaged community of brilliant Swift programmers. Join us on <a href="http://slack.zewo.io" target="_blank">Slack</a> to get to know us!</p>
 					</div>
 				</div>
 			</div>
+
 		</div>
 		<footer class="footer navbar-dark">
 			<p>&copy; 2016 Zewo</p>
