--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 									<a class="nav-link" href="https://github.com/Zewo"><i class="fa fa-github"></i> Github</a>
 								</li>
 								<li class="nav-item">
+									<a class="nav-link" href="http://docs.zewo.io"><i class="fa fa-book"></i> Docs</a>
+								</li>
+								<li class="nav-item">
 									<a class="nav-link" href="http://slack.zewo.io"><i class="fa fa-slack"></i> Slack</a>
 								</li>
 								<li class="nav-item">
