--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 						<div class="hidden-xs-down">
 							<ul class="nav navbar-nav">
 								<li class="nav-item">
-									<a class="nav-link" href="https://github.com/Zewo"><i class="fa fa-github"></i> Github</a>
+									<a class="nav-link" href="https://github.com/Zewo/Zewo"><i class="fa fa-github"></i> Github</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="http://docs.zewo.io"><i class="fa fa-book"></i> Docs</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="https://blog.zewo.io"><i class="fa fa-pencil"></i> Blog</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="http://slack.zewo.io"><i class="fa fa-slack"></i> Slack</a>
@@ -53,10 +56,13 @@
 				<div class="container-fluid bg-inverse p-a-1">
 					<ul class="nav navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="https://github.com/Zewo"><i class="fa fa-github"></i> Github</a>
+							<a class="nav-link" href="https://github.com/Zewo/Zewo"><i class="fa fa-github"></i> Github</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="http://docs.zewo.io"><i class="fa fa-book"></i> Docs</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://blog.zewo.io"><i class="fa fa-pencil"></i> Blog</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="http://slack.zewo.io"><i class="fa fa-slack"></i> Slack</a>
@@ -77,7 +83,7 @@
 				<h2>Zewo</h2>
 				<h1>Build server software in Swift</h1>
 				<h3>Zewo is a set of open source libraries that help you build <br class="hero-caption-break">modern and blazing fast server software.</h3>
-				<a href="https://github.com/Zewo">
+				<a href="https://github.com/Zewo/Zewo">
 					<img class="github-button" src="/assets/images/get-started-on-github.svg" alt="Github">
 				</a>
 			</div>
