--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ import Router
 import ResourcefulRoute
 
 let v1 = Router("/v1") { route in
-    route.post("/users", span data-toggle="tooltip" title="">UserResources.create</span>)
-    route.<span data-toggle="tooltip" title="">delete</span>("/users/:id", UserResources.destroy)
+    route.post("/users", <span data-toggle="tooltip" title="">UsersResource.create</span>)
+    route.<span data-toggle="tooltip" title="">delete</span>("/users/:id", UsersResource.destroy)
 }
 
 let app = Router(<span data-toggle="tooltip" title="">matcher</span>: TrieRouteMatcher.self) { route in
