--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ let app = Router(middleware: contentNegotiator) { route in
         guard let user = request.<span data-toggle="tooltip" title="">user</span> else {
             return Response(status: .BadRequest)
         }
-        User.save(user)
-        return Response(content: user)
+        let id = User.save(user)
+        return Response(content: id)
     }
 }
 
