add platform section

--- a/index.html
+++ b/index.html
@@ -211,9 +211,21 @@ try Server(<span data-toggle="tooltip" title="">middleware</span>: logger, respo
             <div class="row featurette alt">
                 <div class="container">
                     <div class="col-md-4 col-md-push-8">
-                        <img class="featurette-image center-block" src="/assets/images/feature-mit.svg" alt="MIT Licensed">
-                    </div>
-                    <div class="col-md-7 col-md-pull-3">
+						<img class="featurette-image center-block" src="/assets/images/feature-platform.svg" alt="Platform">
+  					</div>
+  					<div class="col-md-7 col-md-pull-3">
+ 						<h2>Zewo is a platform</h2>
+ 						<h3>Build the next generation web framework with Zewo</h3>
+ 						<p>Thanks to Zewo’s modularity, you can pick and choose what you want to use for your own framework - whether it be Venice for concurrency, the HTTP Server, the included Trie-based router matcher for your Router, or one of our many other components.</p>
+ 					</div>
+ 				</div>
+ 			</div>
+ 			<div class="row featurette">
+ 				<div class="container">
+					<div class="col-md-4">
+ 						<img class="featurette-image center-block" src="/assets/images/feature-mit.svg" alt="MIT Licensed">
+ 					</div>
+ 					<div class="col-md-8">
                         <h2>MIT Licensed</h2>
                         <h3>Contribute to everyone, without reservation.</h3>
                         <p>The entire Zewo code base is licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>. By contributing to Zewo you are contributing to an open and engaged community of brilliant Swift programmers. Join us on <a href="http://slack.zewo.io" target="_blank">Slack</a> to get to know us!</p>
