add same amount of code space for reference

--- a/index.html
+++ b/index.html
@@ -175,7 +175,14 @@ let app = Router(middleware: contentNegotiator) { route in
     }
 }
 
-try Server(<span data-toggle="tooltip" title="">middleware</span>: logger, responder: app).start()</code></pre>
+try Server(<span data-toggle="tooltip" title="">middleware</span>: logger, responder: app).start()
+
+
+
+
+
+
+</code></pre>
                                 </div>
                             </div>
                         </div>
