--- a/index.html
+++ b/index.html
@@ -260,5 +260,14 @@ try Server(<span data-toggle="tooltip" title="">middleware</span>: logger, respo
                 placement: "right"
             });
         </script>
+        <script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ 			 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-74502049-1', 'auto');
+  			ga('send', 'pageview');
+		</script>
     </body>
 </html>
