--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                                     <a class="nav-link" href="http://docs.zewo.io"><i class="fa fa-book"></i> Docs</a>
                                 </li>
                                 <li class="nav-item">
+									<a class="nav-link" href="https://blog.zewo.io"><i class="fa fa-pencil"></i> Blog</a>
+								</li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="http://slack.zewo.io"><i class="fa fa-slack"></i> Slack</a>
                                 </li>
                                 <li class="nav-item">
@@ -58,6 +61,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="http://docs.zewo.io"><i class="fa fa-book"></i> Docs</a>
                         </li>
+                        <li class="nav-item">
+							<a class="nav-link" href="https://blog.zewo.io"><i class="fa fa-pencil"></i> Blog</a>
+						</li>
                         <li class="nav-item">
                             <a class="nav-link" href="http://slack.zewo.io"><i class="fa fa-slack"></i> Slack</a>
                         </li>
