--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Open-source library for building fast, concurrent web servers using Swift">
+        <meta name="description" content="Open source libraries for modern and blazing fast server software.">
         <meta name="author" content="Zewo">
         <link rel="icon" href="favicon.ico">
         <title>Zewo</title>
