add open graph metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Open source libraries for modern and blazing fast server software.">
         <meta name="author" content="Zewo">
+        <meta property="og:title" content="Zewo" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://zewo.io/" />
+	<meta property="og:image" content="http://zewo.io/assets/images/logo-dark.png" />
         <link rel="icon" href="favicon.ico">
         <title>Zewo</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
