adjust bounce rate

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ try Server(<span data-toggle="tooltip" title="Middleware are applied to responde
 
   			ga('create', 'UA-74502049-1', 'auto');
   			ga('send', 'pageview');
+  			setTimeout(function(){ga('send','event','engagement','30 seconds')}, 30000);
 		</script>
     </body>
 </html>
