--- a/index.html
+++ b/index.html
@@ -297,6 +297,15 @@ try Server(<span data-toggle="tooltip" title="Middleware are applied to responde
                 placement: "right"
             });
         </script>
+        <script type="text/javascript">
+	  var _mfq = _mfq || [];
+	  (function() {
+	    var mf = document.createElement("script");
+	    mf.type = "text/javascript"; mf.async = true;
+	    mf.src = "//cdn.mouseflow.com/projects/e7a386d3-cabb-491e-ae5a-37c76ad80cfd.js";
+	    document.getElementsByTagName("head")[0].appendChild(mf);
+	  })();
+	</script>
         <script>
   			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
